--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Daily Home Expenses Calculator | Free Online Budget Tracker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-2539575351912022/4686620355" crossorigin="anonymous"></script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -50,8 +50,8 @@
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-                 data-ad-slot="YOUR_AD_SLOT"
+                 data-ad-client="ca-app-pub-2539575351912022/4686620355"
+<!--                  data-ad-slot="YOUR_AD_SLOT" -->
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
@@ -156,8 +156,8 @@
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-                 data-ad-slot="YOUR_AD_SLOT"
+                 data-ad-client="ca-app-pub-2539575351912022/4686620355"
+<!--                  data-ad-slot="YOUR_AD_SLOT" -->
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
