--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Daily Home Expenses Calculator">
     <meta property="og:description" content="Track and manage your household budget with our free online expense calculator">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourusername.github.io/expense-calculator">
+    <meta property="og:url" content="https://codewithwaqar5656.github.io/ExpenseCalculator">
     <link rel="canonical" href="https://yourusername.github.io/expense-calculator">
     <title>Daily Home Expenses Calculator | Free Online Budget Tracker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Daily Home Expenses Calculator",
-      "url": "https://yourusername.github.io/expense-calculator",
+      "url": "https://codewithwaqar5656.github.io/ExpenseCalculator",
       "description": "Free online tool to track and manage your daily home expenses",
       "applicationCategory": "FinanceApplication"
     }
@@ -51,7 +51,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-app-pub-2539575351912022/4686620355"
-<!--                  data-ad-slot="YOUR_AD_SLOT" -->
+                 data-ad-slot="1234567890"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
@@ -157,7 +157,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-app-pub-2539575351912022/4686620355"
-<!--                  data-ad-slot="YOUR_AD_SLOT" -->
+                 data-ad-slot="1234567890"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
