--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Track and manage your household budget with our free online expense calculator">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://codewithwaqar5656.github.io/ExpenseCalculator">
-    <link rel="canonical" href="https://yourusername.github.io/expense-calculator">
+    <link rel="canonical" href="https://codewithwaqar5656.github.io/ExpenseCalculator">
     <title>Daily Home Expenses Calculator | Free Online Budget Tracker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
