--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="Adsense_ID"
+                 data-ad-client="ads.txt"
                  data-ad-slot="4686620355"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
@@ -156,7 +156,7 @@
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="Adsense_ID"
+                 data-ad-client="ads.txt"
                  data-ad-slot="4686620355"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
